@@ -10,3 +10,4 @@ faces.shp
 faces2.shp
 amulets.shp
 bgfiredoom.shp
+fellowshipstaff.shp
